Fixing spacing withiin div tags

--- a/src/snake/snake.css
+++ b/src/snake/snake.css
@@ -1,4 +1,10 @@
+.snake {
+  
+}
+
 .game {
+  width: 100%; 
+  height: 100%;
   display: flex;
   align-items: center;
 }
